--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Reader</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_display_web_page">DisplayWebPageActivity</string>
+    <string name="title_activity_display_web_view">DisplayWebViewActivity</string>
 
 </resources>
