--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Reader</string>
+    <string name="app_name">Lostgrad</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_display_web_page">DisplayWebPageActivity</string>
     <string name="title_activity_display_web_view">DisplayWebViewActivity</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
+    <string name="title_activity_select_options">SelectOptionsActivity</string>
+
+    <string name="country_prompt">Choose a country</string>
+
+    <string-array name="country_arrays">
+        <item>Computing</item>
+        <item>Accounting</item>
+        <item>Engineering</item>
+        <item>France</item>
+        <item>Italy</item>
+        <item>Singapore</item>
+        <item>New Zealand</item>
+        <item>India</item>
+    </string-array>
+
+    <string-array name="job_types">
+        <item>Entry Level</item>
+        <item>Graduate Scheme</item>
+    </string-array>
 
 </resources>
