--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,17 +12,22 @@
     <string name="country_prompt">Choose a country</string>
 
     <string-array name="country_arrays">
-        <item>Computing</item>
+        <item>All</item>
         <item>Accounting</item>
+        <item>Computing</item>
         <item>Engineering</item>
-        <item>France</item>
-        <item>Italy</item>
-        <item>Singapore</item>
-        <item>New Zealand</item>
-        <item>India</item>
+        <item>Law</item>
+        <item>Management</item>
+        <item>Marketing</item>
+        <item>Media</item>
+        <item>Property</item>
+        <item>Recruitment Consulting</item>
+        <item>Science</item>
+        <item>Teaching</item>
     </string-array>
 
     <string-array name="job_types">
+        <item>All</item>
         <item>Entry Level</item>
         <item>Graduate Scheme</item>
     </string-array>
